--- a/package.json
+++ b/package.json
@@ -1,34 +1,23 @@
 {
-  "name": "mytinerary",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "font-awesome": "^4.7.0",
-    "react": "^16.8.4",
-    "react-animated-slider": "^1.1.4",
-    "react-burger-menu": "^2.6.5",
-    "react-dom": "^16.8.4",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
-    "react-slick": "^0.23.2",
-    "slick-carousel": "^1.8.1"
-  },
+  "name": "mytinerary-mireiavs",
+  "version": "1.0.0",
+  "description": "mytinerary web app",
+  "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "cd client && npm run start",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "author": "Mireia Vilalta <m.vilalta.mern@gmail.com>",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.19"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {},
-  "proxy": "http://localhost:5000/"
+  "devDependencies": {
+    "nodemon": "^1.18.10"
+  }
 }
