--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Mireia Vilalta <m.vilalta.mern@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.19"
