--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.19"
+    "mongoose": "^5.4.19",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
