--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
+    "config": "^3.1.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
     "multer": "^1.4.1"
   },
