--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-animated-slider": "^1.1.4",
     "react-burger-menu": "^2.6.5",
     "react-dom": "^16.8.4",
+    "react-google-login": "^5.0.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
