--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^4.1.0",
     "config": "^3.1.0",
+    "cookie-session": "^1.3.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "react-facebook-login": "^4.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
