added star rating

--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "react": "^16.8.4",
     "react-animated-slider": "^1.1.4",
     "react-burger-menu": "^2.6.5",
+    "react-country-region-selector": "^1.4.3",
     "react-dom": "^16.8.4",
     "react-google-login": "^5.0.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-slick": "^0.23.2",
+    "react-star-ratings": "^2.3.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
