--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-session": "^1.3.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
     "multer": "^1.4.1",
