--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.4",
     "react-animated-slider": "^1.1.4",
     "react-burger-menu": "^2.6.5",
