--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
 language: node_js
 node_js:
   - "stable"
+
+script:
+  - npm test
+
+cache:
+  directories:
+  - node_modules
+  
+script:
+  - npm test
+  - npm run build
