--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mytinerary web app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cd client && npm run test",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "cd client && npm run start",
