--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -2,7 +2,8 @@
   "env": {
     "browser": true,
     "es6": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "extends": ["eslint:recommended", "plugin:react/recommended"],
   "globals": {
@@ -19,7 +20,8 @@
   "parser": "babel-eslint",
   "plugins": ["react"],
   "rules": {
-    "no-console": 0
+    "no-console": 0,
+    "array-callback-return": 0
   },
   "settings": {
     "react": {
