fixed comments issue

--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "react-animated-slider": "^1.1.4",
     "react-burger-menu": "^2.6.5",
     "react-country-region-selector": "^1.4.3",
+    "react-dnd": "^7.4.5",
+    "react-dnd-html5-backend": "^7.4.4",
     "react-dom": "^16.8.4",
     "react-google-login": "^5.0.4",
     "react-redux": "^6.0.1",
@@ -25,6 +27,7 @@
     "react-scripts": "2.1.8",
     "react-slick": "^0.23.2",
     "react-star-ratings": "^2.3.0",
+    "react-tag-input": "^6.4.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
